secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
    - name: secret-container
      image: nginx:latest
      command: ['echo "<h1>Username: $SECRET_USERNAME Password: $PASSWORD </h1>"']
  restartPolicy: Never
