default-ingress.yaml
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backend
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
