service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cat
  namespace: main-namespace
  labels: 
    app: cat-app
spec:
  selector:
    app: cat-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-monkey
  namespace: main-namespace
  labels: 
    app: monkey-app
spec:
  selector:
    app: monkey-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: service-main
  namespace: main-namespace
  labels: 
    app: main-app
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
