ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service-main
          servicePort: 80
      - path: /cat
        backend:
          serviceName: service-cat
          servicePort: 80
      - path: /monkey
        backend:
          serviceName: service-monkey
          servicePort: 80
